--- a/beps/bep_0015.html
+++ b/beps/bep_0015.html
@@ -94,7 +94,7 @@ like approach can be used to storing the connection IDs on the tracker
 side.  A connection ID can be used for multiple requests. A client can
 use a connection ID until one minute after it has received
 it. Trackers should accept the connection ID until two minutes after
-it has been send.</p>
+it has been sent.</p>
 </div>
 <div class="section" id="time-outs">
 <h1>Time outs</h1>
@@ -158,7 +158,7 @@ t = 68: scrape response
 </div>
 <div class="section" id="udp-tracker-protocol">
 <h1>UDP tracker protocol</h1>
-<p>All values are send in network byte order (big endian). Do not expect
+<p>All values are sent in network byte order (big endian). Do not expect
 packets to be exactly of a certain size. Future extensions could
 increase the size of packets.</p>
 <div class="section" id="connect">
